--- a/.github/workflows/update-trigger.yml
+++ b/.github/workflows/update-trigger.yml
@@ -1,7 +1,7 @@
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 13 * * 2,4,6'
+    - cron: '30 13 * * *'
 name: update-trigger()
 defaults:
   run:
